# jocika

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  config.json  main.c
cmake/: CMakeCache.txt  FindMPG123.cmake  Makefile  cmake_install.cmake
include/: globals.h
include/commands/: achievement_command.h  clear_command.h  command.h  command_manager.h  disconnect_command.h  join_command.h  library_command.h  pause_command.h  permission_command.h  ping_command.h  play_command.h  queue_command.h  resume_command.h  skip_command.h  slog_command.h  stop_command.h  voice_command.h  voice_recorder_command.h  voice_recorder_stop_command.h  weather_command.h
include/listeners/: listener.h  listener_manager.h  ready_listener.h  slashcommand_listener.h  slog_listener.h  voice_recorder_listener.h
include/utils/: achievement.h  achievement_manager.h  audio.h  audio_utils.h  database.h  guild_audio_manager.h  permission_manager.h  process.h  track.h  track_library.h  weather_boi.h
src/: globals.cpp  main.c  main.cpp
src/commands/: achievement_command.cpp  clear_command.cpp  command_manager.cpp  disconnect_command.cpp  join_command.cpp  library_command.cpp  pause_command.cpp  permission_command.cpp  ping_command.cpp  play_command.cpp  queue_command.cpp  resume_command.cpp  skip_command.cpp  slog_command.cpp  stop_command.cpp  voice_recorder_command.cpp  voice_recorder_stop_command.cpp  weather_command.cpp
src/listeners/: listener_manager.cpp  ready_listener.cpp  slashcommand_listener.cpp  slog_listener.cpp  voice_recorder_listener.cpp
(+11 files in other folders)
